# gateway

./: .gitignore  Cargo.toml  Makefile  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
.qlty/: qlty.toml
crates/cloud-providers/: Cargo.toml
crates/cloud-providers/src/: anthropic.rs  async_job.rs  base.rs  bedrock.rs  fal.rs  flux.rs  gemini.rs  grok.rs  huggingface.rs  kling.rs  lib.rs  luma.rs  ollama.rs  openai.rs  openai_compat.rs  recraft.rs  replicate.rs  runway.rs  stability.rs  together.rs
crates/cloud-providers/tests/: adapter_integration.rs  fal_mock.rs  flux_mock.rs  grok_mock.rs  kling_mock.rs  luma_mock.rs  replicate_mock.rs  runway_mock.rs  together_mock.rs
crates/gateway/: Cargo.toml
crates/gateway-embedded/: Cargo.toml
crates/gateway-embedded/src/: lib.rs
crates/gateway-embedded/src/adapters/: embedded_llama.rs  fastembed.rs  llama_cpp.rs  mod.rs  ort.rs
crates/gateway-embedded/src/registry/: managed.rs  mod.rs
crates/gateway/src/: budget.rs  config.rs  consensus.rs  dispatch.rs  engine.rs  facade.rs  lib.rs  panel.rs  pruning.rs  purpose.rs  selection.rs  store.rs
crates/gateway/src/adapters/: anthropic.rs  async_job.rs  base.rs  bedrock.rs  fal.rs  flux.rs  gemini.rs  grok.rs  huggingface.rs  kling.rs  luma.rs  mod.rs  noop.rs  ollama.rs  openai.rs  openai_compat.rs  recraft.rs  replicate.rs  runway.rs  stability.rs  together.rs
crates/gateway/src/types/: capability.rs  config.rs  error.rs  io.rs  request.rs
crates/gateway/tests/: adapter_integration.rs  fal_mock.rs  flux_mock.rs  grok_mock.rs  kling_mock.rs  luma_mock.rs  reexport_paths.rs  replicate_mock.rs  runway_mock.rs  together_mock.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs  readiness.rs  registry.rs
crates/kernel/src/adapters/: capability.rs  mod.rs
crates/kernel/src/types/: config.rs  error.rs  mod.rs  request.rs
crates/kokoro/: Cargo.toml
crates/kokoro/src/: audio.rs  error.rs  lang.rs  lib.rs  model.rs  synth.rs  tokenizer.rs  vocab.rs  voices.rs
crates/kokoro/src/g2p/: en.rs  mod.rs
crates/local-engine/: Cargo.toml
crates/local-engine/src/: lib.rs  supervisor.rs
crates/local-engine/src/registry/: external.rs  mod.rs  ollama.rs  pull.rs
crates/local-providers/: Cargo.toml
crates/local-providers/src/: lib.rs
crates/local-providers/src/adapters/: embedded_llama.rs  fastembed.rs  kokoro.rs  llama_cpp.rs  mod.rs  ort.rs
docs/design/: adapter-capability-traits.md  hf-inference-adapter.md  hf-model-download.md  provisioning-supervisor-and-workspace-layering.md  quota-hard-limits-and-calendar-windows.md  safetensors-engine.md  subscription-quota-auth.md
docs/features/: README.md  budget-and-cost.md  capabilities-and-adapters.md  circuit-breaker.md  configuration.md  embedded-inference.md  fallback-chains.md  model-registry.md  persistence-store.md  providers.md  routing-and-selection.md  streaming.md  subscription-quota.md  tool-calling.md  tracing-and-attempts.md
docs/llms/: README.md  configuration.md  custom-adapters.md  embedded-and-hf.md  quickstart.md  recipes.md  upgrade-0.2-to-0.3.md  upgrade-0.3-to-0.4.md
docs/mockups/: Button.dc.html  Chip.dc.html  CodeWindow.dc.html  Eyebrow.dc.html  Gateway Site.dc.html
docs/plans/: 2026-07-17-capability-traits-refactor.md  2026-07-20-cloud-providers-extraction.md  2026-07-20-kernel-extraction.md  2026-07-20-local-split-extraction.md  2026-07-21-provisioning-supervisor-pr4.md
docs/reviews/: 2026-07-17-production-readiness-review.md
site/: .gitignore  package.json  rokkit.config.js  svelte.config.js  uno.config.ts  vite.config.ts  wrangler.jsonc
site/scripts/: copy-docs.mjs
site/src/: app.css  app.d.ts  app.html  hooks.server.ts
site/src/lib/: data.ts  docs.ts  seo.ts
site/src/lib/components/: ArchDiagram.svelte  ArrowIcon.svelte  BrandMark.svelte  Chip.svelte  CodeWindow.svelte  CrateCard.svelte  Eyebrow.svelte  FeatureCard.svelte  Footer.svelte  Nav.svelte  SectionHead.svelte  Seo.svelte  UsageTabs.svelte
site/src/routes/: +layout.svelte  +layout.ts  +page.svelte
site/src/routes/docs/: +page.svelte
site/src/routes/docs/[slug]/: +page.svelte  +page.ts
site/src/routes/llms-full.txt/: +server.ts
site/src/routes/llms.txt/: +server.ts
