[package]
name = "sensei-cloud-providers"
version = "0.4.0"
edition = "2024"
description = "Cloud LLM provider adapters (OpenAI, Anthropic, Bedrock, Gemini, …) for the sensei gateway"
license = "MIT"

[lib]
name = "cloud_providers"

[dependencies]
kernel = { package = "sensei-kernel", path = "../kernel" }
aws-config = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio", "credentials-process", "sso", "behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-smithy-types = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
