[package]
name = "gateway-embedded"
version = "0.3.1"
edition = "2024"
description = "In-process inference adapters and model registry for the sensei gateway"
license = "MIT"

[features]
default = []
# In-process inference engine adapters. Each pulls in heavyweight native deps
# (C++ for llama-cpp, C++ for ort, both for fastembed) so they're opt-in.
llama-cpp = ["dep:llama-cpp-2"]
fastembed = ["dep:fastembed"]
ort = ["dep:ort", "dep:tokenizers", "dep:ndarray"]
# Hugging Face model download (HF-A). Opt-in like the engine adapters: pulls the
# hf-hub async client, reqwest (for a byte-range size probe), and sysinfo (RAM +
# disk pre-flight). The default build stays free of all three.
hf-download = ["dep:hf-hub", "dep:reqwest", "dep:sysinfo"]

[dependencies]
gateway = { path = "../gateway" }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "rt", "sync"] }
tokio-stream = "0.1"
tracing = "0.1"

llama-cpp-2 = { version = "0.1.146", default-features = false, optional = true }
fastembed = { version = "5", optional = true }
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"], optional = true }
tokenizers = { version = "0.21", optional = true }
ndarray = { version = "0.16", optional = true }

# hf-download feature deps (opt-in). hf-hub 0.4.x exposes the async `tokio`
# client (`api::tokio::Api`); 1.0 replaced it with an unrelated `HFClient`
# builder, so we pin the 0.4 line. rustls-tls keeps us off OpenSSL/native-tls.
# reqwest is pinned to 0.4.x's own pin (0.12) to avoid a duplicate build.
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "rustls-tls"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
sysinfo = { version = "0.39", default-features = false, features = ["disk", "system"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
