[package]
name = "sensei-gateway"
version = "0.4.0"
edition = "2024"
description = "LLM inference routing engine — fallback chains, circuit breaker, budget management"
license = "MIT"

[lib]
name = "gateway"

[features]
default = ["cloud"]
cloud = ["dep:cloud-providers"]
local = ["dep:local-engine"]

[dependencies]
# Ergonomic `stream! { ... yield ev; ... }` macro used by
# `Gateway::execute_stream` to build the public StreamEvent stream
# imperatively (await candidates, yield ProviderSwitch/Chunk/Done/Error).
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
cloud-providers = { package = "sensei-cloud-providers", path = "../cloud-providers", optional = true }
futures = "0.3"
kernel = { package = "sensei-kernel", path = "../kernel" }
local-engine = { package = "sensei-local-engine", path = "../local-engine", optional = true }
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
