[package]
name = "sensei-gateway"
version = "0.4.4"
edition = "2024"
description = "LLM inference routing engine — fallback chains, circuit breaker, budget management"
license = "MIT"

[lib]
name = "gateway"

[features]
default = ["cloud"]
cloud = ["dep:cloud-providers"]
local = ["dep:local-engine"]
# Engine pass-throughs: forward to local-engine (which forwards to local-providers),
# so a consumer can depend on ONLY `sensei-gateway` and still opt into the in-process
# engines + HF pull. Each implies `local`.
local-hf-download = ["local", "local-engine/hf-download"]
local-llama-cpp = ["local", "local-engine/llama-cpp"]
local-fastembed = ["local", "local-engine/fastembed"]
local-ort = ["local", "local-engine/ort"]
local-kokoro = ["local", "local-engine/kokoro"]

[dependencies]
# Ergonomic `stream! { ... yield ev; ... }` macro used by
# `Gateway::execute_stream` to build the public StreamEvent stream
# imperatively (await candidates, yield ProviderSwitch/Chunk/Done/Error).
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
cloud-providers = { package = "sensei-cloud-providers", path = "../cloud-providers", optional = true }
futures = "0.3"
kernel = { package = "sensei-kernel", path = "../kernel" }
local-engine = { package = "sensei-local-engine", path = "../local-engine", optional = true }
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
