[package]
name = "sensei-local-engine"
version = "0.3.1"
edition = "2024"
description = "Model resolvers (managed / Ollama / external) + Hugging Face pull for the sensei gateway"
license = "MIT"

[lib]
name = "local_engine"

[features]
default = []
hf-download = ["dep:hf-hub", "dep:reqwest", "dep:sysinfo"]

[dependencies]
kernel = { package = "sensei-kernel", path = "../kernel" }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "rt", "sync"] }
tracing = "0.1"
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "rustls-tls"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
sysinfo = { version = "0.39", default-features = false, features = ["disk", "system"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
