[package]
name = "sensei-local-engine"
version = "0.4.4"
edition = "2024"
description = "Model resolvers (managed / Ollama / external) + Hugging Face pull for the sensei gateway"
license = "MIT"

[lib]
name = "local_engine"

[features]
default = []
hf-download = ["dep:hf-hub", "dep:reqwest", "dep:sysinfo"]
# Internal umbrella: on whenever an in-process engine wing is enabled. Gates the
# supervisor's coldboot code paths (adapter load + registration) and the
# registry/resolver context they need, so the default build carries none of it.
coldboot = []
# Engine wings: forward to local-providers, which the supervisor coldboots into
# an adapter and registers. Each pulls in its heavy backend only when enabled.
llama-cpp = ["dep:local-providers", "local-providers/llama-cpp", "coldboot"]
fastembed = ["dep:local-providers", "local-providers/fastembed", "coldboot"]
ort = ["dep:local-providers", "local-providers/ort", "coldboot"]
kokoro = ["dep:local-providers", "local-providers/kokoro", "coldboot"]

[dependencies]
kernel = { package = "sensei-kernel", path = "../kernel" }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "rt", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
# 1.0 is the first Xet-capable release: it bundles the mandatory `hf-xet`
# transfer engine, so downloads complete after HF's platform-wide Xet migration
# (0.x stalls on the Xet-bridge response for every current GGUF repo). The async
# client is the crate default in 1.0 — no `tokio` feature to select. It shares
# reqwest 0.13 (rustls) with the size probe below, so the tree carries one
# reqwest major, rustls-only (0.13 defaults to rustls; no native-tls/openssl).
hf-hub = { version = "1.0", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["rustls"], optional = true }
sysinfo = { version = "0.39", default-features = false, features = ["disk", "system"], optional = true }
# Coldboot target: the supervisor loads a local-providers adapter and registers
# it. Optional + feature-gated (the engine wings above). local-providers carries
# a dev-dep back on local-engine (embedded_llama tests) — that reverse edge is
# dev-only, so this normal edge does not form a build cycle.
local-providers = { package = "sensei-local-providers", path = "../local-providers", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
