[package]
name = "sensei-local-providers"
version = "0.3.1"
edition = "2024"
description = "In-process inference adapters (llama.cpp, fastembed, ONNX Runtime) for the sensei gateway"
license = "MIT"

[lib]
name = "local_providers"

[features]
default = []
llama-cpp = ["dep:llama-cpp-2"]
fastembed = ["dep:fastembed"]
ort = ["dep:ort", "dep:tokenizers", "dep:ndarray"]

[dependencies]
kernel = { package = "sensei-kernel", path = "../kernel" }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "rt", "sync"] }
tokio-stream = "0.1"
tracing = "0.1"
llama-cpp-2 = { version = "0.1.146", default-features = false, optional = true }
fastembed = { version = "5", optional = true }
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"], optional = true }
tokenizers = { version = "0.21", optional = true }
ndarray = { version = "0.16", optional = true }

[dev-dependencies]
# The embedded_llama adapter's tests exercise the concrete ExternalResolver,
# which lives in local-engine. Dev-only edge (acyclic): local-engine never
# depends on local-providers. Runtime deps stay kernel-only.
local-engine = { package = "sensei-local-engine", path = "../local-engine" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
