[package]
name = "sensei-local-providers"
version = "0.4.3"
edition = "2024"
description = "In-process inference adapters (llama.cpp, fastembed, ONNX Runtime) for the sensei gateway"
license = "MIT"

[lib]
name = "local_providers"

[features]
default = []
llama-cpp = ["dep:llama-cpp-2"]
# Deferred (gh#7): fastembed 5.x pins hf-hub 0.5, duplicating our hf-hub 1.0, so
# the `fastembed` optional dep below is disabled. This feature is kept as an
# inert placeholder — so the cfg-gated adapter stays a *known* feature (no
# unexpected-cfg warnings) — but enabling it won't build until the dep is
# restored. Ollama embeddings are primary; fastembed was optional.
# Re-enable: put back `["dep:fastembed"]` here + uncomment the dep below.
fastembed = []
ort = ["dep:ort", "dep:tokenizers", "dep:ndarray"]
# Kokoro-82M local TTS (gh#23). Pulls the `sensei-kokoro` engine with its `onnx`
# feature (ORT inference); the adapter loads the model + voices + lexicon from a
# resolved `ModelEntry`.
kokoro = ["dep:sensei-kokoro"]

[dependencies]
kernel = { package = "sensei-kernel", path = "../kernel" }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "rt", "sync"] }
tokio-stream = "0.1"
tracing = "0.1"
llama-cpp-2 = { version = "0.1.146", default-features = false, optional = true }
# fastembed = { version = "5", optional = true }  # deferred (gh#7): pins hf-hub 0.5
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"], optional = true }
tokenizers = { version = "0.21", optional = true }
ndarray = { version = "0.16", optional = true }
# Local Kokoro TTS engine; the `onnx` feature is always on when this is pulled
# (the adapter needs inference). Shares the workspace's `ort` (rc.12).
sensei-kokoro = { path = "../kokoro", features = ["onnx"], optional = true }

[dev-dependencies]
# The embedded_llama adapter's tests exercise the concrete ExternalResolver,
# which lives in local-engine. Dev-only edge (acyclic): local-engine never
# depends on local-providers. Runtime deps stay kernel-only.
local-engine = { package = "sensei-local-engine", path = "../local-engine" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
